--- a/part3/index.html
+++ b/part3/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HouseVOP</title>
-    <link rel="script" href="map.js">
+    
     <link rel="script" href="script.js">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/latest/normalize.css" />
 </head>
 
@@ -232,6 +233,7 @@
                     <div class="footer__icons">
                         <div class="footer__ico youtube"></div>
                         <div class="footer__ico vk"></div>
+                        <!-- TODO: facebook active -->
                         <div class="footer__ico fb"></div>
                         <div class="footer__ico ig"></div>
                     </div>
